force-app/main/default/objects/Activity/fields/Tax_Return_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Return_Status__c</fullName>
    <label>Tax Return Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Clearing Review Points</fullName>
            </value>
            <value>
                <fullName>Review Requested</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Missing Information</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <isActive>false</isActive>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>Filed</fullName>
                <isActive>false</isActive>
                <label>Filed</label>
            </value>
            <value>
                <fullName>Holding</fullName>
                <isActive>false</isActive>
                <label>Holding</label>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <isActive>false</isActive>
                <label>Not Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>