force-app/main/default/objects/Activity/fields/Tax_Returns_Needed__c.field-meta.xml
<CustomField>
    <fullName>Tax_Returns_Needed__c</fullName>
    <label>Final Tax Returns Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>