force-app/main/default/objects/Activity/fields/Total_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Total_Transactions__c</fullName>
    <label>Total Transactions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>