force-app/main/default/objects/Activity/fields/Training_Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Training_Call_Outcome__c</fullName>
    <label>Training Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Call Cancelled</fullName>
            </value>
            <value>
                <fullName>Training Completed</fullName>
                <default>true</default>
                <label>Training Completed</label>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>