force-app/main/default/objects/Activity/fields/Transition_Plan_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Transition_Plan_Submitted__c</fullName>
    <label>Transition Plan Submitted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>