force-app/main/default/objects/Activity/fields/Uncategorized_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Uncategorized_Transactions__c</fullName>
    <label>Uncategorized Transactions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>